syntax = "proto3";

option go_package="./pb";

package GrpcAgent;

service Subscriber {
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
}

message SubscribeRequest {
  string topic = 1;
  string address = 2;
}

message SubscribeResponse {
  bool status = 1;
}
