syntax = "proto3";

option go_package="./pb";

package GrpcAgent;

service Publisher {
  rpc ProduceMessage (ProduceRequest) returns (ProduceReply);
}

message ProduceRequest {
  string topic = 1;
  string message = 2;
}

message ProduceReply {
  bool status = 1;
}